[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/pixelmix_bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/game_over.gd" type="Script" id=2]
[ext_resource path="res://sounds/player_grounded.wav" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
resource_name = "game_over"
length = 2.2
tracks/0/type = "value"
tracks/0/path = NodePath("center_container/v_box_container/gordo_label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("center_container/v_box_container/restart_label:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("center_container/v_box_container/gordo_label:rect_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5, 0.6 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 0.8, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("center_container/v_box_container/restart_label:rect_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1.6, 1.7 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 0.8, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/5/type = "audio"
tracks/5/path = NodePath("tick_sound")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
} ],
"times": PoolRealArray( 0.5, 1, 1.6 )
}
tracks/6/type = "value"
tracks/6/path = NodePath("center_container/v_box_container/score_vbox:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("center_container/v_box_container/score_vbox:rect_scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 1, 1.1 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 0.8, 1.2 ), Vector2( 1, 1 ) ]
}

[node name="game_over" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="color_rect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.588235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="center_container" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="v_box_container" type="VBoxContainer" parent="center_container"]
margin_left = 80.0
margin_top = 80.0
margin_right = 80.0
margin_bottom = 80.0
custom_constants/separation = 16

[node name="gordo_label" type="Label" parent="center_container/v_box_container"]
visible = false
margin_right = 128.0
margin_bottom = 30.0
rect_min_size = Vector2( 128, 0 )
rect_scale = Vector2( 0.8, 1.2 )
rect_pivot_offset = Vector2( 64, 15 )
custom_fonts/font = SubResource( 1 )
text = "someone got your sit on the bench press, lol!"
align = 1
valign = 1
autowrap = true

[node name="score_vbox" type="VBoxContainer" parent="center_container/v_box_container"]
visible = false
margin_top = 46.0
margin_right = 128.0
margin_bottom = 66.0
rect_scale = Vector2( 0.8, 1.2 )
rect_pivot_offset = Vector2( 64, 10 )
custom_constants/separation = 4
alignment = 1

[node name="last_score_label" type="Label" parent="center_container/v_box_container/score_vbox"]
margin_right = 128.0
margin_bottom = 8.0
rect_min_size = Vector2( 128, 0 )
rect_pivot_offset = Vector2( 64, 4 )
custom_fonts/font = SubResource( 1 )
text = "last score: 0"
align = 1
valign = 1
autowrap = true

[node name="best_score_label" type="Label" parent="center_container/v_box_container/score_vbox"]
margin_top = 12.0
margin_right = 128.0
margin_bottom = 20.0
rect_min_size = Vector2( 128, 0 )
rect_pivot_offset = Vector2( 64, 4 )
custom_fonts/font = SubResource( 1 )
text = "best score: 0"
align = 1
valign = 1
autowrap = true

[node name="restart_label" type="Label" parent="center_container/v_box_container"]
visible = false
margin_top = 82.0
margin_right = 128.0
margin_bottom = 90.0
rect_min_size = Vector2( 128, 0 )
rect_scale = Vector2( 0.8, 1.2 )
rect_pivot_offset = Vector2( 64, 4 )
custom_fonts/font = SubResource( 1 )
text = "press \"R\" to restart!"
align = 1
valign = 1
autowrap = true

[node name="animation_player" type="AnimationPlayer" parent="."]
anims/game_over = SubResource( 2 )

[node name="tick_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
